test/tests/compiler/18_structures/invalid_types/extra_credit/union_type_declarations/union_self_reference.plx
type union u(    i: i32    , self: union u# illegal; incomplete member type
    
    )

pub fn main(none) i32 {
    return 0
}
